src/main/java/calculator/parser/logic/LogicExprParserParser.java
// Generated from ./LogicExprParser.g4 by ANTLR 4.13.1
package calculator.parser.logic;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class LogicExprParserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, NEG=4, CONJ=5, DISJ=6, IMPLY=7, XORR=8, EQUIV=9, 
		TRUTH=10, SPACE=11;
	public static final int
		RULE_entry = 0, RULE_logicExpr = 1, RULE_infixForm = 2, RULE_prefixForm = 3, 
		RULE_postfixForm = 4;
	private static String[] makeRuleNames() {
		return new String[] {
			"entry", "logicExpr", "infixForm", "prefixForm", "postfixForm"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "','", "'NOT'", "'AND'", "'OR'", "'IMPL'", "'XOR'", 
			"'EQ'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, "NEG", "CONJ", "DISJ", "IMPLY", "XORR", "EQUIV", 
			"TRUTH", "SPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "LogicExprParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public LogicExprParserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class EntryContext extends ParserRuleContext {
		public LogicExprContext logicExpr() {
			return getRuleContext(LogicExprContext.class,0);
		}
		public EntryContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_entry; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).enterEntry(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).exitEntry(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprParserVisitor ) return ((LogicExprParserVisitor<? extends T>)visitor).visitEntry(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EntryContext entry() throws RecognitionException {
		EntryContext _localctx = new EntryContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_entry);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(10);
			logicExpr();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class LogicExprContext extends ParserRuleContext {
		public InfixFormContext infixForm() {
			return getRuleContext(InfixFormContext.class,0);
		}
		public PrefixFormContext prefixForm() {
			return getRuleContext(PrefixFormContext.class,0);
		}
		public PostfixFormContext postfixForm() {
			return getRuleContext(PostfixFormContext.class,0);
		}
		public LogicExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_logicExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).enterLogicExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).exitLogicExpr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprParserVisitor ) return ((LogicExprParserVisitor<? extends T>)visitor).visitLogicExpr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LogicExprContext logicExpr() throws RecognitionException {
		LogicExprContext _localctx = new LogicExprContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_logicExpr);
		try {
			setState(15);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(12);
				infixForm(0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(13);
				prefixForm();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(14);
				postfixForm(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class InfixFormContext extends ParserRuleContext {
		public InfixFormContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_infixForm; }
	 
		public InfixFormContext() { }
		public void copyFrom(InfixFormContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InfixEquivContext extends InfixFormContext {
		public List<InfixFormContext> infixForm() {
			return getRuleContexts(InfixFormContext.class);
		}
		public InfixFormContext infixForm(int i) {
			return getRuleContext(InfixFormContext.class,i);
		}
		public TerminalNode EQUIV() { return getToken(LogicExprParserParser.EQUIV, 0); }
		public InfixEquivContext(InfixFormContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).enterInfixEquiv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).exitInfixEquiv(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprParserVisitor ) return ((LogicExprParserVisitor<? extends T>)visitor).visitInfixEquiv(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InfixNegationContext extends InfixFormContext {
		public TerminalNode NEG() { return getToken(LogicExprParserParser.NEG, 0); }
		public InfixFormContext infixForm() {
			return getRuleContext(InfixFormContext.class,0);
		}
		public InfixNegationContext(InfixFormContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).enterInfixNegation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).exitInfixNegation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprParserVisitor ) return ((LogicExprParserVisitor<? extends T>)visitor).visitInfixNegation(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InfixImpliesContext extends InfixFormContext {
		public List<InfixFormContext> infixForm() {
			return getRuleContexts(InfixFormContext.class);
		}
		public InfixFormContext infixForm(int i) {
			return getRuleContext(InfixFormContext.class,i);
		}
		public TerminalNode IMPLY() { return getToken(LogicExprParserParser.IMPLY, 0); }
		public InfixImpliesContext(InfixFormContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).enterInfixImplies(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).exitInfixImplies(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprParserVisitor ) return ((LogicExprParserVisitor<? extends T>)visitor).visitInfixImplies(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InfixAndContext extends InfixFormContext {
		public List<InfixFormContext> infixForm() {
			return getRuleContexts(InfixFormContext.class);
		}
		public InfixFormContext infixForm(int i) {
			return getRuleContext(InfixFormContext.class,i);
		}
		public TerminalNode CONJ() { return getToken(LogicExprParserParser.CONJ, 0); }
		public InfixAndContext(InfixFormContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).enterInfixAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).exitInfixAnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprParserVisitor ) return ((LogicExprParserVisitor<? extends T>)visitor).visitInfixAnd(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InfixLiteralContext extends InfixFormContext {
		public TerminalNode TRUTH() { return getToken(LogicExprParserParser.TRUTH, 0); }
		public InfixLiteralContext(InfixFormContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).enterInfixLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).exitInfixLiteral(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprParserVisitor ) return ((LogicExprParserVisitor<? extends T>)visitor).visitInfixLiteral(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InfixOrContext extends InfixFormContext {
		public List<InfixFormContext> infixForm() {
			return getRuleContexts(InfixFormContext.class);
		}
		public InfixFormContext infixForm(int i) {
			return getRuleContext(InfixFormContext.class,i);
		}
		public TerminalNode DISJ() { return getToken(LogicExprParserParser.DISJ, 0); }
		public InfixOrContext(InfixFormContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).enterInfixOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).exitInfixOr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprParserVisitor ) return ((LogicExprParserVisitor<? extends T>)visitor).visitInfixOr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InfixXorContext extends InfixFormContext {
		public List<InfixFormContext> infixForm() {
			return getRuleContexts(InfixFormContext.class);
		}
		public InfixFormContext infixForm(int i) {
			return getRuleContext(InfixFormContext.class,i);
		}
		public TerminalNode XORR() { return getToken(LogicExprParserParser.XORR, 0); }
		public InfixXorContext(InfixFormContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).enterInfixXor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).exitInfixXor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprParserVisitor ) return ((LogicExprParserVisitor<? extends T>)visitor).visitInfixXor(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class InfixGroupContext extends InfixFormContext {
		public InfixFormContext infixForm() {
			return getRuleContext(InfixFormContext.class,0);
		}
		public InfixGroupContext(InfixFormContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).enterInfixGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).exitInfixGroup(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprParserVisitor ) return ((LogicExprParserVisitor<? extends T>)visitor).visitInfixGroup(this);
			else return visitor.visitChildren(this);
		}
	}

	public final InfixFormContext infixForm() throws RecognitionException {
		return infixForm(0);
	}

	private InfixFormContext infixForm(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		InfixFormContext _localctx = new InfixFormContext(_ctx, _parentState);
		InfixFormContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_infixForm, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(25);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NEG:
				{
				_localctx = new InfixNegationContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;

				setState(18);
				match(NEG);
				setState(19);
				infixForm(8);
				}
				break;
			case TRUTH:
				{
				_localctx = new InfixLiteralContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(20);
				match(TRUTH);
				}
				break;
			case T__0:
				{
				_localctx = new InfixGroupContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
				setState(21);
				match(T__0);
				setState(22);
				infixForm(0);
				setState(23);
				match(T__1);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(44);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(42);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
					case 1:
						{
						_localctx = new InfixAndContext(new InfixFormContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_infixForm);
						setState(27);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(28);
						match(CONJ);
						setState(29);
						infixForm(8);
						}
						break;
					case 2:
						{
						_localctx = new InfixOrContext(new InfixFormContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_infixForm);
						setState(30);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(31);
						match(DISJ);
						setState(32);
						infixForm(7);
						}
						break;
					case 3:
						{
						_localctx = new InfixImpliesContext(new InfixFormContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_infixForm);
						setState(33);
						if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
						setState(34);
						match(IMPLY);
						setState(35);
						infixForm(6);
						}
						break;
					case 4:
						{
						_localctx = new InfixXorContext(new InfixFormContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_infixForm);
						setState(36);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(37);
						match(XORR);
						setState(38);
						infixForm(5);
						}
						break;
					case 5:
						{
						_localctx = new InfixEquivContext(new InfixFormContext(_parentctx, _parentState));
						pushNewRecursionContext(_localctx, _startState, RULE_infixForm);
						setState(39);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(40);
						match(EQUIV);
						setState(41);
						infixForm(4);
						}
						break;
					}
					} 
				}
				setState(46);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class PrefixFormContext extends ParserRuleContext {
		public PrefixFormContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prefixForm; }
	 
		public PrefixFormContext() { }
		public void copyFrom(PrefixFormContext ctx) {
			super.copyFrom(ctx);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrefixXorContext extends PrefixFormContext {
		public TerminalNode XORR() { return getToken(LogicExprParserParser.XORR, 0); }
		public List<PrefixFormContext> prefixForm() {
			return getRuleContexts(PrefixFormContext.class);
		}
		public PrefixFormContext prefixForm(int i) {
			return getRuleContext(PrefixFormContext.class,i);
		}
		public PrefixXorContext(PrefixFormContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).enterPrefixXor(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).exitPrefixXor(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprParserVisitor ) return ((LogicExprParserVisitor<? extends T>)visitor).visitPrefixXor(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrefixNegationContext extends PrefixFormContext {
		public TerminalNode NEG() { return getToken(LogicExprParserParser.NEG, 0); }
		public PrefixFormContext prefixForm() {
			return getRuleContext(PrefixFormContext.class,0);
		}
		public PrefixNegationContext(PrefixFormContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).enterPrefixNegation(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).exitPrefixNegation(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprParserVisitor ) return ((LogicExprParserVisitor<? extends T>)visitor).visitPrefixNegation(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrefixImpliesContext extends PrefixFormContext {
		public TerminalNode IMPLY() { return getToken(LogicExprParserParser.IMPLY, 0); }
		public List<PrefixFormContext> prefixForm() {
			return getRuleContexts(PrefixFormContext.class);
		}
		public PrefixFormContext prefixForm(int i) {
			return getRuleContext(PrefixFormContext.class,i);
		}
		public PrefixImpliesContext(PrefixFormContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).enterPrefixImplies(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).exitPrefixImplies(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprParserVisitor ) return ((LogicExprParserVisitor<? extends T>)visitor).visitPrefixImplies(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrefixGroupContext extends PrefixFormContext {
		public PrefixFormContext prefixForm() {
			return getRuleContext(PrefixFormContext.class,0);
		}
		public PrefixGroupContext(PrefixFormContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).enterPrefixGroup(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).exitPrefixGroup(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprParserVisitor ) return ((LogicExprParserVisitor<? extends T>)visitor).visitPrefixGroup(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrefixOrContext extends PrefixFormContext {
		public TerminalNode DISJ() { return getToken(LogicExprParserParser.DISJ, 0); }
		public List<PrefixFormContext> prefixForm() {
			return getRuleContexts(PrefixFormContext.class);
		}
		public PrefixFormContext prefixForm(int i) {
			return getRuleContext(PrefixFormContext.class,i);
		}
		public PrefixOrContext(PrefixFormContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).enterPrefixOr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).exitPrefixOr(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprParserVisitor ) return ((LogicExprParserVisitor<? extends T>)visitor).visitPrefixOr(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrefixEquivContext extends PrefixFormContext {
		public TerminalNode EQUIV() { return getToken(LogicExprParserParser.EQUIV, 0); }
		public List<PrefixFormContext> prefixForm() {
			return getRuleContexts(PrefixFormContext.class);
		}
		public PrefixFormContext prefixForm(int i) {
			return getRuleContext(PrefixFormContext.class,i);
		}
		public PrefixEquivContext(PrefixFormContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).enterPrefixEquiv(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).exitPrefixEquiv(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprParserVisitor ) return ((LogicExprParserVisitor<? extends T>)visitor).visitPrefixEquiv(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrefixAndContext extends PrefixFormContext {
		public TerminalNode CONJ() { return getToken(LogicExprParserParser.CONJ, 0); }
		public List<PrefixFormContext> prefixForm() {
			return getRuleContexts(PrefixFormContext.class);
		}
		public PrefixFormContext prefixForm(int i) {
			return getRuleContext(PrefixFormContext.class,i);
		}
		public PrefixAndContext(PrefixFormContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).enterPrefixAnd(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).exitPrefixAnd(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprParserVisitor ) return ((LogicExprParserVisitor<? extends T>)visitor).visitPrefixAnd(this);
			else return visitor.visitChildren(this);
		}
	}
	@SuppressWarnings("CheckReturnValue")
	public static class PrefixLiteralContext extends PrefixFormContext {
		public TerminalNode TRUTH() { return getToken(LogicExprParserParser.TRUTH, 0); }
		public PrefixLiteralContext(PrefixFormContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).enterPrefixLiteral(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof LogicExprParserListener ) ((LogicExprParserListener)listener).exitPrefixLiteral(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof LogicExprParserVisitor ) return ((LogicExprParserVisitor<? extends T>)visitor).visitPrefixLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrefixFormContext prefixForm() throws RecognitionException {
		PrefixFormContext _localctx = new PrefixFormContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_prefixForm);
		int _la;
		try {
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NEG:
				_localctx = new PrefixNegationContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(47);
				match(NEG);
				setState(48);
				prefixForm();
				}
				break;
			case CONJ:
				_localctx = new PrefixAndContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(49);
				match(CONJ);
				setState(50);
				match(T__0);
				setState(51);
				prefixForm();
				setState(58);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(54); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(52);
						match(T__2);
						setState(53);
						prefixForm();
						}
						}
						setState(56); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==T__2 );
					}
				}

				setState(60);
				match(T__1);
				}
				break;
			case DISJ:
				_localctx = new PrefixOrContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(62);
				match(DISJ);
				setState(63);
				match(T__0);
				setState(64);
				prefixForm();
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(67); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(65);
						match(T__2);
						setState(66);
						prefixForm();
						}
						}
						setState(69); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==T__2 );
					}
				}

				setState(73);
				match(T__1);
				}
				break;
			case IMPLY:
				_localctx = new PrefixImpliesContext(_localctx);
				enterOuterAlt(_localctx, 4);
				{
				setState(75);
				match(IMPLY);
				setState(76);
				match(T__0);
				setState(77);
				prefixForm();
				setState(84);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__2) {
					{
					setState(80); 
					_errHandler.sync(this);
					_la = _input.LA(1);
					do {
						{
						{
						setState(78);
						match(T__2);
						setState(79);
						prefixForm();
						}
						}
						setState(82); 
						_errHandler.sync(this);
						_la = _input.LA(1);
					} while ( _la==T__2 );
					}
				}
